tests/negative/pkg_warnings_in_pkg/target/src/foo.toit
// Copyright (C) 2021 Toitware ApS.
// Use of this source code is governed by a Zero-Clause BSD license that can
// be found in the tests/LICENSE file.

/// Deprecated.
deprecated:

say_hi:
  deprecated
  return "hello"
